@@ -53,6 +53,8 @@ ListPredefinedInvoicesAssociatedProject=List of customer's predefined invoices a
 ListSupplierOrdersAssociatedProject=List of supplier's orders associated with the project
 ListSupplierInvoicesAssociatedProject=List of supplier's invoices associated with the project
 ListContractAssociatedProject=List of contracts associated with the project
+ListFichinterAssociatedProject=List of interventions associated with the project
+ListTripAssociatedProject=List of trips and expenses associated with the project
 ListActionsAssociatedProject=List of actions associated with the project
 ActivityOnProjectThisWeek=Activity on project this week
 ActivityOnProjectThisMonth=Activity on project this month
