@@ -53,6 +53,8 @@ ListPredefinedInvoicesAssociatedProject=Liste des factures clients prédéfinies
 ListSupplierOrdersAssociatedProject=Liste des commandes fournisseurs associées au projet
 ListSupplierInvoicesAssociatedProject=Liste des factures fournisseur associées au projet
 ListContractAssociatedProject=Liste des contrats associés au projet
+ListFichinterAssociatedProject=Liste des interventions associées au projet
+ListTripAssociatedProject=Liste des notes de frais associés au projet
 ListActionsAssociatedProject=Liste des actions associées au projet
 ActivityOnProjectThisWeek=Activité sur les projets cette semaine
 ActivityOnProjectThisMonth=Activité sur les projets ce mois
