@@ -2,19 +2,19 @@
 CHARSET=UTF-8
 Trip=Déplacement
 Trips=Déplacements
-TripsAndExpenses=Déplacements et frais
-TripId=Id déplacement/note frais
-TripCard=Fiche déplacement/frais
-AddTrip=Ajouter déplacement/frais
-ListOfTrips=Liste des déplacements/frais
+TripsAndExpenses=Note de frais
+TripId=Id note frais
+TripCard=Fiche frais
+AddTrip=Ajouter frais
+ListOfTrips=Liste des frais
 ListOfFees=Liste des notes de frais
-NewTrip=Nouveau déplacement
+NewTrip=Nouvelle note de frais
 CompanyVisited=Société/Institution visitée
 Kilometers=Kilomètres
 FeesKilometersOrAmout=Montant ou kilomètres
 DeleteTrip=Supprimer déplacement
-ConfirmDeleteTrip=Êtes-vous sûr de vouloir supprimer ce déplacement/note de frais ?
+ConfirmDeleteTrip=Êtes-vous sûr de vouloir supprimer cette note de frais ?
 TF_OTHER=Autre
 TF_LUNCH=Repas
 TF_TRIP=Déplacement
-ListTripsAndExpenses=Liste des déplacements et frais
+ListTripsAndExpenses=Liste des notes de frais
